<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moving_vector_average</name>
  <version>0.0.0</version>
  <description>Package with a node that publishes the moving window average of 3D vectors</description>
  <maintainer email="cadmus.to+dev@gmail.com">Cadmus</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>vector_arithmetic</build_depend>

  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
