<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vector_arithmetic</name>
  <version>0.0.0</version>
  <description>Package that provides some arithmetic operations to 3D vectors</description>
  <maintainer email="cadmus.to+dev@gmail.com">Cadmus</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>geometry_msgs_arithmetic</build_depend>

  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
